[metadata]
name = pycircularbuffer
version = 0.0.9
description = Simple implementation of circular buffer
long_description = file: README.rst
url = https://github.com/dozymoe/PyCircularBuffer
author = Fahri Reza
author_email = i@dozy.moe
license = MIT
project_urls =
    Bug Tracker = https://github.com/dozymoe/PyCircularBuffer/issues
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3

[tool:pytest]
testpaths = tests
